--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=5678
-N8N_ENCRYPTION_KEY=IMPORTANT
-VUE_APP_URL_BASE_API=https://n8n.example.com/
-WEBHOOK_URL=https://app.readyformars.org/
-TUNNEL_WEBHOOK_URL=https://api.readyformars.org/
-GENERIC_TIMEZONE=America/Sao_Paulo
-TZ=America/Sao_Paulo
+N8N_ENCRYPTION_KEY=ifGOSnut9BbDqpFmBM7tqrhwkt1F32V2
+VUE_APP_URL_BASE_API=https://n8n-vue-app.joat.cz
+WEBHOOK_URL=https://n8n-app.joat.cz
+TUNNEL_WEBHOOK_URL=https://n8n-api.joat.cz
+GENERIC_TIMEZONE=Europe/Prague
+TZ=Europe/Prague
 N8N_LOG_LEVEL=verbose
 DB_TYPE=postgresdb
 DB_POSTGRESDB_DATABASE=$POSTGRES_DATABASE
